--- a/package.json
+++ b/package.json
@@ -15,24 +15,26 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@gregross.dev/gerg": "^0.3.1",
+    "@bmlt-enabled/croutonjs": "^3.12.2",
+    "@gregross.dev/gerg": "^0.4.2",
     "babel-plugin-styled-components": "^1.13.2",
-    "gatsby": "^3.10.2",
-    "gatsby-plugin-image": "^1.10.1",
-    "gatsby-plugin-manifest": "^3.10.0",
-    "gatsby-plugin-netlify-cms": "^5.10.0",
-    "gatsby-plugin-react-helmet": "^4.10.0",
-    "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-plugin-sitemap": "^4.6.0",
-    "gatsby-plugin-styled-components": "^4.10.0",
-    "gatsby-source-filesystem": "^3.10.0",
-    "gatsby-transformer-remark": "^4.7.0",
-    "gatsby-transformer-sharp": "^3.10.0",
-    "netlify-cms-app": "^2.15.31",
+    "gatsby": "^3.11.0",
+    "gatsby-plugin-image": "^1.11.0",
+    "gatsby-plugin-manifest": "^3.11.0",
+    "gatsby-plugin-netlify-cms": "^5.11.0",
+    "gatsby-plugin-react-helmet": "^4.11.0",
+    "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-plugin-sitemap": "^4.7.0",
+    "gatsby-plugin-styled-components": "^4.11.0",
+    "gatsby-source-filesystem": "^3.11.0",
+    "gatsby-transformer-remark": "^4.8.0",
+    "gatsby-transformer-sharp": "^3.11.0",
+    "netlify-cms-app": "^2.15.33",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-twitter-widgets": "^1.10.0",
     "styled-components": "^5.3.0"
   }
 }
